--- a/resources/scientific_computing/README.org
+++ b/resources/scientific_computing/README.org
@@ -53,6 +53,7 @@ conda config --remove channels defaults
 
 ** Setting up an environment
 
+Instructions [[https://docs.conda.io/projects/conda/en/4.6.0/user-guide/tasks/manage-environments.html#creating-an-environment-with-commands][here]].
 
 ** Alternatives
 
