removed mistake graphlet coutning

--- a/resources/machine_learning/graphlets/README.org
+++ b/resources/machine_learning/graphlets/README.org
@@ -35,6 +35,6 @@ Key papers introducing graphlet-based methodologies.
 | A combinatorial approach to graphlet counting                | 1. (ORCA) Infer 5-node orbit counts via linear equations                                                             | Tomaž Hočevar       | Janez Demšar        | 2014 | [[https://doi.org/10.1093/bioinformatics/btt717][10.1093/bioinformatics/btt717]] |
 | Efficient Graphlet Counting for Large Networks               | 1. (PGD) Infer 4-node graphlet counts via polynomial equations                                                       | Nesreen K. Ahmed    | Nick Duffield       | 2015 | [[https://doi.org/10.1109/ICDM.2015.141][10.1109/ICDM.2015.141]]         |
 | ESCAPE: Efficiently Counting All 5-Vertex Subgraphs          | 1. (ESCAPE) Generalises PGD to 5 nodes 2. faster graph traversal via ordering 3. non-induced graphlets via equations | Ali Pinar           | Vaidyanathan Vishal | 2017 | [[https://doi.org/10.1145/3038912.3052597][10.1145/3038912.3052597]]       |
-| Efficiently Counting Vertex Orbits of All 5-vertex Subgraphs | 1. (EVOKE) Generalises ESCAPE to count (!non induced!) orbits                                                        | Noujan Pashanasangi | C. Seshadhri        | 2020 | [[https://doi.org/10.1145/3336191.3371773][10.1145/3336191.3371773]]       |
+| Efficiently Counting Vertex Orbits of All 5-vertex Subgraphs | 1. (EVOKE) Generalises ESCAPE to count orbits                                                                        | Noujan Pashanasangi | C. Seshadhri        | 2020 | [[https://doi.org/10.1145/3336191.3371773][10.1145/3336191.3371773]]       |
 |--------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------+---------------------+---------------------+------+-------------------------------|
 
