--- a/resources/research_skills/reading/README.org
+++ b/resources/research_skills/reading/README.org
@@ -8,22 +8,22 @@
 
 * Key authors
 
-|---------------------+-------------------------------------------------------------------------------------|
-| Name                | Research focus                                                                      |
-|---------------------+-------------------------------------------------------------------------------------|
-| [[https://scholar.google.com/citations?user=YtUDgPIAAAAJ][Marinka Zitnik]]      | ML, Geometric DL, Knowledge Graphs, Biomedical AI                                   |
-| [[https://scholar.google.com/citations?user=Q_kKkIUAAAAJ&hl=en][Jure Leskovec]]       | ML, Data mining, Neural Networks, Knowledge Graphs, Complex Networks                |
-| [[https://scholar.google.com/citations?user=cEepZOEAAAAJ&hl=en][Anna Goldenberg]]     | ML, computational biology, network modeling, disease heterogeneity data integration |
-| Trey Ideker         |                                                                                     |
-| Tijana Milenkovic   |                                                                                     |
-| Jan Baumbach        |                                                                                     |
-| Bo Wang             |                                                                                     |
-| Predrag Radivojac   |                                                                                     |
-| Noel Malod-Dognin   |                                                                                     |
-| Carlo Cannistraci   |                                                                                     |
-| Andrew Teschendorff |                                                                                     |
-| Igor Jurisica       |                                                                                     |
-| Jörg Menche         |                                                                                     |
-| Jörg Stelling       |                                                                                     |
-| Sophia Tsoka        |                                                                                     |
-|---------------------+-------------------------------------------------------------------------------------|
+|---------------------+---------------------------------------------------------------------------------------|
+| Name                | Research focus                                                                        |
+|---------------------+---------------------------------------------------------------------------------------|
+| [[https://scholar.google.com/citations?user=37FDILIAAAAJ&hl=en&oi=ao][Bo Wang]]             | ML, Computational Biology, Computer Vision                                                                                |
+| [[https://scholar.google.com/citations?user=YtUDgPIAAAAJ][Marinka Zitnik]]      | ML, Geometric DL, Knowledge Graphs, Biomedical AI                                     |
+| [[https://scholar.google.com/citations?user=Q_kKkIUAAAAJ&hl=en][Jure Leskovec]]       | ML, Data mining, Neural Networks, Knowledge Graphs, Complex Networks                  |
+| [[https://scholar.google.com/citations?user=cEepZOEAAAAJ&hl=en][Anna Goldenberg]]     | ML, Computational Biology, Network Modeling, Disease heterogeneity, Data Integration  |
+| [[https://scholar.google.com/citations?user=KnAit3cAAAAJ&hl=en][Trey Ideker]]         | Cancer, Systems Biology, Networks, Bioinformatics                                     |
+| [[https://scholar.google.com/citations?user=QrS2y5sAAAAJ&hl=en&oi=ao][Tijana Milenkovic]]   | Computational Biology, Network Science, Biological Networks, Graph Theory, Algorithms |
+| [[https://scholar.google.com/citations?user=PWV8xOoAAAAJ&hl=en&oi=ao][Jan Baumbach]]        | Bioinformatics, AI, Systems Biology, Systems Medicine                                 |
+| Predrag Radivojac   |                                                                                       |
+| Noel Malod-Dognin   |                                                                                       |
+| Carlo Cannistraci   |                                                                                       |
+| Andrew Teschendorff |                                                                                       |
+| Igor Jurisica       |                                                                                       |
+| Jörg Menche         |                                                                                       |
+| Jörg Stelling       |                                                                                       |
+| Sophia Tsoka        |                                                                                       |
+|---------------------+---------------------------------------------------------------------------------------|
