--- a/resources/research_skills/reading/README.org
+++ b/resources/research_skills/reading/README.org
@@ -8,22 +8,23 @@
 
 * Key authors
 
-|---------------------+---------------------------------------------------------------------------------------|
-| Name                | Research focus                                                                        |
-|---------------------+---------------------------------------------------------------------------------------|
-| [[https://scholar.google.com/citations?user=37FDILIAAAAJ&hl=en&oi=ao][Bo Wang]]             | ML, Computational Biology, Computer Vision                                                                                |
-| [[https://scholar.google.com/citations?user=YtUDgPIAAAAJ][Marinka Zitnik]]      | ML, Geometric DL, Knowledge Graphs, Biomedical AI                                     |
-| [[https://scholar.google.com/citations?user=Q_kKkIUAAAAJ&hl=en][Jure Leskovec]]       | ML, Data mining, Neural Networks, Knowledge Graphs, Complex Networks                  |
-| [[https://scholar.google.com/citations?user=cEepZOEAAAAJ&hl=en][Anna Goldenberg]]     | ML, Computational Biology, Network Modeling, Disease heterogeneity, Data Integration  |
-| [[https://scholar.google.com/citations?user=KnAit3cAAAAJ&hl=en][Trey Ideker]]         | Cancer, Systems Biology, Networks, Bioinformatics                                     |
-| [[https://scholar.google.com/citations?user=QrS2y5sAAAAJ&hl=en&oi=ao][Tijana Milenkovic]]   | Computational Biology, Network Science, Biological Networks, Graph Theory, Algorithms |
-| [[https://scholar.google.com/citations?user=PWV8xOoAAAAJ&hl=en&oi=ao][Jan Baumbach]]        | Bioinformatics, AI, Systems Biology, Systems Medicine                                 |
-| Predrag Radivojac   |                                                                                       |
-| Noel Malod-Dognin   |                                                                                       |
-| Carlo Cannistraci   |                                                                                       |
-| Andrew Teschendorff |                                                                                       |
-| Igor Jurisica       |                                                                                       |
-| Jörg Menche         |                                                                                       |
-| Jörg Stelling       |                                                                                       |
-| Sophia Tsoka        |                                                                                       |
-|---------------------+---------------------------------------------------------------------------------------|
+|---------------------+----------------------------------------------------------------------------------------|
+| Name                | Research focus                                                                         |
+|---------------------+----------------------------------------------------------------------------------------|
+| [[https://scholar.google.com/citations?user=cEepZOEAAAAJ&hl=en][Anna Goldenberg]]     | ML, Computational Biology, Network Modeling, Disease heterogeneity, Data Integration   |
+| [[https://scholar.google.com/citations?user=w2YDjVwAAAAJ&hl=nl&oi=ao][Andrew Teschendorff]] | Cancer System-omics, Statistical Epigenomics, Single-Cell Systems Biology              |
+| [[https://scholar.google.com/citations?user=37FDILIAAAAJ&hl=en&oi=ao][Bo Wang]]             | ML, Computational Biology, Computer Vision                                             |
+| [[https://scholar.google.com/citations?user=b7xoXO0AAAAJ&hl=en&oi=ao][Carlo Cannistraci]]   | Network Science, Computational Biomedicine, Computational Neuroscience                 |
+| [[https://scholar.google.com/citations?user=Hi9ALnkAAAAJ&hl=nl&oi=ao][Igor Jurisica]]       |                                                                                        |
+| [[https://scholar.google.com/citations?user=PWV8xOoAAAAJ&hl=en&oi=ao][Jan Baumbach]]        | Bioinformatics, AI, Systems Biology, Systems Medicine                                  |
+| [[https://scholar.google.com/citations?user=jHDsgE0AAAAJ&hl=en&oi=ao][Jörg Menche]]         | Network Medicine, Systems Biology, Computational Biology, Network Science, VR          |
+| [[https://scholar.google.com/citations?user=CSMmegYAAAAJ&hl=en&oi=sra][Jörg Stelling]]       | Systems biology, Synthetic Biology                                                     |
+| [[https://scholar.google.com/citations?user=Q_kKkIUAAAAJ&hl=en][Jure Leskovec]]       | ML, Data mining, Neural Networks, Knowledge Graphs, Complex Networks                   |
+| [[https://scholar.google.com/citations?user=YtUDgPIAAAAJ][Marinka Zitnik]]      | ML, Geometric DL, Knowledge Graphs, Biomedical AI                                      |
+| [[https://scholar.google.com/citations?hl=en&user=UU3N6-UAAAAJ][Michael Bronstein]]   | Geometric DL, Graph Representation Learning, GNNs, Shape Analysis, Geometry processing |
+| [[https://scholar.google.com/citations?user=ywFtAtMAAAAJ&hl=en&oi=ao][Noel Malod-Dognin]]   |                                                                                        |
+| [[https://scholar.google.com/citations?user=LUU0EFgAAAAJ&hl=en&oi=ao][Sophia Tsoka]]        | Bioinformatics                                                                         |
+| [[https://scholar.google.com/citations?user=KnAit3cAAAAJ&hl=en][Trey Ideker]]         | Cancer, Systems Biology, Networks, Bioinformatics                                      |
+| [[https://scholar.google.com/citations?user=QrS2y5sAAAAJ&hl=en&oi=ao][Tijana Milenkovic]]   | Computational Biology, Network Science, Biological Networks, Graph Theory, Algorithms  |
+| [[https://scholar.google.com/citations?user=ugj0at8AAAAJ&hl=en&oi=ao][Predrag Radivojac]]   | ML, Bioinformatics, Computational Biology, Data Mining                                 |
+|---------------------+----------------------------------------------------------------------------------------|
